# Ey-Ai

./: Cargo.toml  README.md
src/: lib.rs  main.rs  model_llm.rs  traits.rs
src/model/: mod.rs
src/model/message/: message.rs  mod.rs
src/model/message/handler/: class_message.rs  mod.rs
src/model/models/: gemini.rs  mod.rs
src/model/utils/: mod.rs  models.rs  select_model.rs  selector.rs  wrapper.rs
src/model/websocket/: websocket.rs
src/models/: gemini.rs  mod.rs  model_client.rs
src/utils/: mod.rs  models.rs  select_model.rs  stream.rs  wrapper.rs
src/websocket/: websocket.rs
