[package]
name = "chatbot-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
dotenvy = "0.15.7"
once_cell = "1.21.3"
reqwest = {version="0.12.24", features = ["json", "blocking"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }

